	* google:
	  + support video, maps and news.
	  + new options -i, -v, -m, -n, shortcuts for
	    -search={images,videos,maps,news}.
	* debcontents, debpackages: update docs for new arches and
	  distributions.
	* bugzilla:
	  + fix url so it works with redhat & eclipse bugzillas too.
	  + enable -s=redhat.
	* ixquick, w3css: fix tests.

2011-02-20  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: bugzilla - searches various bugzillas,
	  defaults to kernel.
	* pgpkeys: add more options, support more
	  keyservers, default to sks-keyservers.net.
	* bump version to 2.2.8.
	* test/Makefile.am: add cablesearch.test.

2011-02-19  Ian Beckwith  <ianb@erislabs.net>

	* lastfm: fix url to avoid a redirect that mangled
	  args with spaces.
	* debbugs: add -s as an alias for -search=src.
	* surfraw.IN: (finally) update copyright year to 2011.
	* remove traces of port elvi from build system.

2011-02-09  Kyle Isom <coder@kyleisom.net>

        * fix a number of tests to match current site formats

2011-01-12  Kyle Isom  <coder@kyleisom.net>

	* New elvi:
	  + cablesearch - search wikileaks cables
	  + duckduckgo - replace with better implementation
	  + openports - search openbsd ports

2010-12-04  Jakob <jakob@pipefour.org>

	* new elvis: pasearch.

2010-12-08  Ian Beckwith  <ianb@erislabs.net>

	* arxiv: Thanks to MT <mt_void@warpmail.net> for patch that fixes:
	  1. Search queries with more than two terms would fail, e.g.
	    'supermassive black hole'.
	  2. Full text search was broken, it works now.
	  3. Enhancement: quoting the query now does an exact string match.

2010-10-29  Ian Beckwith  <ianb@erislabs.net>

	* wayback: advanced search is broken, rip out all
	  options and use basic search.
	* w3_url_escape: add /g to '/'->'%2F' replacement.
	* uzbl_load_url_from_surfraw: use @AWK@ to pick up
	  ./configure's choice of awk implementation.

2010-10-28  Ian Beckwith  <ianb@erislabs.net>

	* Support -local-help, --local-help or -lh to get elvi-specific