@@ -1,2 +1,6 @@
 wikipedia surfraw
 Julian Assange
+wikipedia -d surfraw
+Julian Assange
+wikipedia -d darktide
+Deletionpedia
